# f1-wheel-screen

./: .gitignore  CMakeLists.txt  MainView.c  MainView.h  README.md  main.c  main.py
examples/: CMakeLists.txt  lcd_test.c  main.h
lib/font/: CustomFont32.c  Geist.c  GeistRegular.c  GiestFont36.c  GiestFont72.c  font36.c  fonts.h
lib/lcd/: LCD_Driver.h  LCD_GUI.c  LCD_Touch.c
wheel/: CMakeLists.txt  MainView.c  MainView.h
